# pebbles

./: .buildconfig  .gitignore  .pylintrc  .travis.yml  README.md  com.github.subhadeepjasu.pebbles.yml  hot_reload.sh  meson.build
.flatpak-builder/cache/: summary
.flatpak-builder/cache/refs/heads/app/com.github.subhadeepjasu.pebbles/x86_64/: master
.flatpak-builder/cache/refs/heads/runtime/com.github.subhadeepjasu.pebbles.Debug/x86_64/: master
.flatpak-builder/cache/refs/heads/runtime/com.github.subhadeepjasu.pebbles.Locale/x86_64/: master
.flatpak-builder/cache/refs/heads/x86_64-com.github.subhadeepjasu.pebbles.yml/: build-granite  build-gsl  build-libhandy-1  build-pebbles  cleanup  finish  init
.flatpak-builder/checksums/: x86_64-com.github.subhadeepjasu.pebbles.yml
.flatpak-builder/git/https_github.com_elementary_granite.git/: FETCH_HEAD  config  shallow
.flatpak-builder/git/https_github.com_elementary_granite.git/objects/pack/: pack-62b65836a2671fbee1d74c862cb13a5f3b46831b.idx  pack-62b65836a2671fbee1d74c862cb13a5f3b46831b.pack
.flatpak-builder/git/https_gitlab.gnome.org_GNOME_libhandy.git/: FETCH_HEAD  config  shallow
.flatpak-builder/git/https_gitlab.gnome.org_GNOME_libhandy.git/objects/pack/: pack-2fcb3ceee3f1ddf6659142cba8910bdeff1df515.idx  pack-2fcb3ceee3f1ddf6659142cba8910bdeff1df515.pack
.github/workflows/: ci.yml  gettext.yml  lint.yml  pylint.yml  valalint.yml
data/: Application.css  com.github.SubhadeepJasu.Pebbles.appdata.xml  com.github.SubhadeepJasu.Pebbles.desktop  com.github.SubhadeepJasu.pebbles.appdata.xml  com.github.SubhadeepJasu.pebbles.appdata.xml.in  com.github.SubhadeepJasu.pebbles.desktop  com.github.SubhadeepJasu.pebbles.gschema.xml  com.github.subhadeepjasu.pebbles.appdata.xml.in  com.github.subhadeepjasu.pebbles.desktop.in  com.github.subhadeepjasu.pebbles.gresource.xml  com.github.subhadeepjasu.pebbles.gschema.xml  com.github.subhadeepjasu.pebbles.gschema.xml.in  gresource.xml  meson.build  style.scss
data/fonts/DotGothic16/: OFL.txt
data/icons/: meson.build
data/ui/: button.blp  display.blp  history_display.blp  main_window.blp  popover_menu_item.blp  preferences_dialog.blp  scientific_display.blp  scientific_view.blp  shortcuts_dialog.blp  statistics_display.blp  statistics_view.blp  styled_button.blp  view.blp  window.blp
debian/: changelog  control  copyright  rules
meson/: tags.RheIkm
po/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.SubhadeepJasu.pebbles.pot  com.github.subhadeepjasu.pebbles.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  (+160 more)
po/extra/: LINGUAS  POTFILES  extra.pot  fr.po  pt_BR.po  ru.po
src/: Application.vala  Common.vala  ControlsScheme.vala  History.vala  KeyboardHandler.vala  KeyboardMap.vala  MainWindow.vala  PreferencesOverlay.vala  Settings.vala  StyledButton.vala  application.py  config.vapi  history.py  meson.build  pebbles.in
src/Common/: ResponsiveBox.vala
src/Core/: BoolArrayStack.vala  Calculus.vala  CharStack.vala  CurrencyConverter.vala  EvaluationResult.vala  Graph.vala  HistoryManager.vala  Programmer.vala  ProgrammerCalculator.vala  ScientificCalculator.vala  Statistics.vala  Utils.vala
src/Test/: TestUtil.vala
src/Views/: BitToggleGrid.vala  CalculusView.vala  CommonKeyPadConverter.vala  CommonNumericKeypad.vala  ControlsOverlay.vala  ConvAngleView.vala  ConvAreaView.vala  ConvCurrView.vala  ConvDataView.vala  ConvEnergyView.vala  ConvLengthView.vala  ConvMassView.vala  ConvPowerView.vala  ConvPressView.vala  ConvSpeedView.vala  ConvTempView.vala  ConvTimeView.vala  ConvVolumeView.vala  DateView.vala  GraphView.vala  HistoryView.vala  MiniCalculator.vala  ProgrammerView.vala  ScientificView.vala  StatisticsView.vala
src/Views/Displays/: CalculusDisplay.vala  GraphDisplay.vala  ProgrammerDisplay.vala  ScientificDisplay.vala  StatisticsDisplay.vala  StatisticsGraph.vala
src/core/: Calculus.vala  Converter.vala  CurrencyConverter.vala  DateCalculator.vala  EvaluationResult.vala  HistoryManager.vala  LengthConverter.vala  ProgrammerCalculator.vala  ScientificCalculator.vala  Statistics.vala  Utils.vala  memory.py  scientific_calculator.py  statistics_calculator.py  tokenizer.py  utils.py
src/shell/: Display.vala  MainWindow.vala  ScientificDisplay.vala  ScientificView.vala  StyledButton.vala  Window.vala  main_window.py  window.py
src/shell/dialogs/: PreferencesDialog.vala  ShortcutsDialog.vala
src/shell/views/: ScientificView.vala  StatisticsView.vala  View.vala
src/shell/widgets/: Button.vala  Display.vala  HistoryDisplay.vala  PopoverMenuItem.vala  ScientificDisplay.vala  StatCell.vala  StatisticsDisplay.vala  StyledButton.vala
src/test/: TestUtil.vala
src/views/: BitToggleGrid.vala  CalculusView.vala  CommonKeyPadConverter.vala  CommonNumericKeypad.vala  ControlsOverlay.vala  ConvAngleView.vala  ConvAreaView.vala  ConvCurrView.vala  ConvDataView.vala  ConvEnergyView.vala  ConvLengthView.vala  ConvMassView.vala  ConvPowerView.vala  ConvPressView.vala  ConvSpeedView.vala  ConvTempView.vala  ConvTimeView.vala  ConvVolumeView.vala  DateView.vala  HistoryView.vala  MiniCalculator.vala  ProgrammerView.vala  ScientificView.vala  StatisticsView.vala
src/views/displays/: CalculusDisplay.vala  ProgrammerDisplay.vala  ScientificDisplay.vala  StatisticsDisplay.vala  StatisticsGraph.vala
