executable(
    meson.project_name(),
    asresources,
    'Application.vala',
    'Settings.vala',
    'MainWindow.vala',
    'StyledButton.vala',
    'views/CalculusView.vala',
    'views/ProgrammerView.vala',
    'views/ScientificView.vala',
    'views/DateView.vala',
    'views/CommonNumericKeypad.vala',
    'views/CommonKeyPadConverter.vala',
    'views/ConvLengthView.vala',
    'views/ConvAreaView.vala',
    'views/ConvVolumeView.vala',
    'views/ConvTimeView.vala',
    'views/ConvAngleView.vala',
    'views/ConvSpeedView.vala',
    'views/ConvPressView.vala',
    'views/ConvMassView.vala',
    'views/ConvEnergyView.vala',
    'views/ConvPowerView.vala',
    'views/ConvTempView.vala',
    'views/ConvDataView.vala',
    'views/ConvCurrView.vala',
    'views/BitToggleGrid.vala',
    'views/displays/ScientificDisplay.vala',
    'views/displays/CalculusDisplay.vala',
    'views/displays/ProgrammerDisplay.vala',
    'test/TestUtil.vala',
    'core/ScientificCalculator.vala',
    'core/Calculus.vala',
    'core/ProgrammerCalculator.vala',
    'core/Utils.vala',
    'core/Converter.vala',
    'core/CurrencyConverter.vala',
    'core/DateCalculator.vala',
    dependencies: [
        core_deps,
        dependency('gtk+-3.0'),
        dependency('granite')
    ],
    install : true
)
