# Listing files to compile
sources = files (
    'Application.vala',
    'Settings.vala',
    'MainWindow.vala',
    'StyledButton.vala',
    'KeyboardHandler.vala',
    'ControlsScheme.vala',
    'PreferencesOverlay.vala',

    'Test/TestUtil.vala',

    'Common/ResponsiveBox.vala',

    'Core/EvaluationResult.vala',
    'Core/HistoryManager.vala',
    'Core/ScientificCalculator.vala',
    'Core/Calculus.vala',
    'Core/ProgrammerCalculator.vala',
    'Core/Statistics.vala',
    'Core/Utils.vala',
    'Core/Converter.vala',
    'Core/CurrencyConverter.vala',
    'Core/DateCalculator.vala',
    'Core/Graph.vala',

    'Core/CharStack.vala',
    'Core/BoolArrayStack.vala',

    'Views/MiniCalculator.vala',
    'Views/CalculusView.vala',
    'Views/ProgrammerView.vala',
    'Views/ScientificView.vala',
    'Views/DateView.vala',
    'Views/StatisticsView.vala',
    'Views/GraphView.vala',
    'Views/CommonNumericKeypad.vala',
    'Views/CommonKeyPadConverter.vala',
    'Views/ConvLengthView.vala',
    'Views/ConvAreaView.vala',
    'Views/ConvVolumeView.vala',
    'Views/ConvTimeView.vala',
    'Views/ConvAngleView.vala',
    'Views/ConvSpeedView.vala',
    'Views/ConvPressView.vala',
    'Views/ConvMassView.vala',
    'Views/ConvEnergyView.vala',
    'Views/ConvPowerView.vala',
    'Views/ConvTempView.vala',
    'Views/ConvDataView.vala',
    'Views/ConvCurrView.vala',
    'Views/BitToggleGrid.vala',
    'Views/ControlsOverlay.vala',
    'Views/HistoryView.vala',
    'Views/BottomPopper.vala',

    'Views/Displays/ScientificDisplay.vala',
    'Views/Displays/CalculusDisplay.vala',
    'Views/Displays/ProgrammerDisplay.vala',
    'Views/Displays/StatisticsDisplay.vala',
    'Views/Displays/StatisticsGraph.vala'
)
